ReadAt() should not change the file position. Tested under R5 and Zeta. This fixes bug #1200 (Received emails are missing attributes).

I hope nothing relies on the previously broken behaviour.



git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23828 a95241bf-73f2-0310-859d-f6bbb57e9c96